fix(qa): solve issue with error while asking
