# services/backend/user-course-microservice/src/main/java/com/lecturebot/generated/model/QueryCourseSpaceRequest.java
@@ -4,6 +4,7 @@ import java.net.URI;
 import java.util.Objects;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonTypeName;
 import org.springframework.lang.Nullable;
 import java.time.OffsetDateTime;
 import jakarta.validation.Valid;
@@ -15,27 +16,37 @@ import java.util.*;
 import jakarta.annotation.Generated;
 
 /**
- * Flashcard
+ * QueryCourseSpaceRequest
  */
 
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-07-20T14:30:01.886583+02:00[Europe/Berlin]", comments = "Generator version: 7.13.0")
-public class Flashcard {
+@JsonTypeName("queryCourseSpace_request")
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-07-20T14:29:55.417633+02:00[Europe/Berlin]", comments = "Generator version: 7.13.0")
+public class QueryCourseSpaceRequest {
 
-  private @Nullable String question;
+  private String question;
 
-  private @Nullable String answer;
+  public QueryCourseSpaceRequest() {
+    super();
+  }
 
-  public Flashcard question(String question) {
+  /**
+   * Constructor with only required parameters
+   */
+  public QueryCourseSpaceRequest(String question) {
+    this.question = question;
+  }
+
+  public QueryCourseSpaceRequest question(String question) {
     this.question = question;
     return this;
   }
 
   /**
-   * Get question
+   * The question to ask about the course space.
    * @return question
    */
-  
-  @Schema(name = "question", example = "What is the capital of France?", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @NotNull 
+  @Schema(name = "question", description = "The question to ask about the course space.", requiredMode = Schema.RequiredMode.REQUIRED)
   @JsonProperty("question")
   public String getQuestion() {
     return question;
@@ -43,26 +54,6 @@ public class Flashcard {
 
   public void setQuestion(String question) {
     this.question = question;
-  }
-
-  public Flashcard answer(String answer) {
-    this.answer = answer;
-    return this;
-  }
-
-  /**
-   * Get answer
-   * @return answer
-   */
-  
-  @Schema(name = "answer", example = "Paris", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
-  @JsonProperty("answer")
-  public String getAnswer() {
-    return answer;
-  }
-
-  public void setAnswer(String answer) {
-    this.answer = answer;
   }
 
   @Override
@@ -73,22 +64,20 @@ public class Flashcard {
     if (o == null || getClass() != o.getClass()) {
       return false;
     }
-    Flashcard flashcard = (Flashcard) o;
-    return Objects.equals(this.question, flashcard.question) &&
-        Objects.equals(this.answer, flashcard.answer);
+    QueryCourseSpaceRequest queryCourseSpaceRequest = (QueryCourseSpaceRequest) o;
+    return Objects.equals(this.question, queryCourseSpaceRequest.question);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(question, answer);
+    return Objects.hash(question);
   }
 
   @Override
   public String toString() {
     StringBuilder sb = new StringBuilder();
-    sb.append("class Flashcard {\n");
+    sb.append("class QueryCourseSpaceRequest {\n");
     sb.append("    question: ").append(toIndentedString(question)).append("\n");
-    sb.append("    answer: ").append(toIndentedString(answer)).append("\n");
     sb.append("}");
     return sb.toString();
   }
